laburando en register-duenio

--- a/TP_Comanda/src/app/pages/user/login/login.page.html
+++ b/TP_Comanda/src/app/pages/user/login/login.page.html
@@ -6,7 +6,7 @@
       <form [formGroup]="form" (ngSubmit)="onLogin()">
         <div class="wrapform">
           <ion-item>
-            <ion-input type="text" name="email" formControlName="email" placeholder="Email">
+            <ion-input type="text" name="email" formControlName="email" placeholder="Correo">
               <ion-icon name="mail-outline"></ion-icon>
             </ion-input>
           </ion-item>
