--- a/TP_Comanda/src/global.scss
+++ b/TP_Comanda/src/global.scss
@@ -52,6 +52,10 @@ ion-card-title,
   color: #251e93 !important;
 }
 
+.alert-button-inner{
+  font-family: "PermanentMarker" !important;
+}
+
 ion-content,
 ion-header,
 ion-footer {
