--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -1,6 +1,6 @@
 <ion-content>
 
-  <ion-fab (click)="takePic()" vertical="top" horizontal="end" slot="fixed">
+  <ion-fab (click)="takePic()" vertical="top" horizontal="end">
     <ion-fab-button>
       <ion-icon name="camera"></ion-icon>
     </ion-fab-button>
@@ -112,7 +112,7 @@
 
         <ion-item>
           <ion-input type="password" name="password" formControlName="password" placeholder="**************">
-            <ion-icon name="lock-closed"></ion-icon>
+            <ion-icon name="lock-closed-outline"></ion-icon>
           </ion-input>
         </ion-item>
 
