--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.scss
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.scss
@@ -11,7 +11,7 @@
 ion-item {
     ion-icon {
         padding-right: 2%;
-        font-size: 18px;    //set in global
+        font-size: 18px;    //TODO set in global
     }
 }
 
