setting style splash

--- a/TP_Comanda/src/app/pages/splash/splash.page.html
+++ b/TP_Comanda/src/app/pages/splash/splash.page.html
@@ -1,14 +1,18 @@
 <ion-content>
-  <!-- <p>Baez Nuñez Agustin</p> -->
+  <div class="container">
+    <div class="container-title">
+      <p>ARM Group</p>
+    </div>
 
-  <img class="heartbeat" src="assets/images/gorrito.png" />
-  <img class="heartbeat" src="assets/images/cubiertos.png" />
+    <div class="container-img">
+      <img class="wobble-hor-bottom" src="assets/images/gorrito.png" />
+      <img class="slide-in-elliptic-top-fwd" src="assets/images/cubiertos.png" />
+    </div>
 
-  <!-- <p>División: 4A</p> -->
+    <div class="container-staff">
+      <p>Penelope Cruz</p>
+      <p>Penelope Cruz</p>
+      <p>Penelope Cruz</p>
+    </div>
+  </div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar transparent>
-    <p>ARM Group</p>
-  </ion-toolbar>
-</ion-footer>
