playing with lazy load

--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -10,7 +10,7 @@
   
 </ion-content>
 
-<ion-fab (click)="onLogout()" vertical="bottom" horizontal="end" slot="fixed">
+<ion-fab (click)="redirectTo('user/logout')" vertical="bottom" horizontal="end" slot="fixed">
   <ion-fab-button>
     <ion-icon name="log-out"></ion-icon>
   </ion-fab-button>
