--- a/TP_Comanda/src/app/pages/user/logout/logout.page.html
+++ b/TP_Comanda/src/app/pages/user/logout/logout.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-  <ion-img src="assets/img/icon.png"></ion-img>
+  <ion-img src="assets/images/icon.png"></ion-img>
   
   <ion-card-content>
     <p>¿Seguro desea cerrar sesión?</p>
