create success duenio guard

--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -130,4 +130,10 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-fab (click)="redirectTo('home')" vertical="bottom" horizontal="start">
+    <ion-fab-button>
+      <ion-icon name="home"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
