--- a/TP_Comanda/src/app/pages/user/register/anonimo/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/anonimo/register.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<!-- <ion-content>
   <ion-img src="assets/img/icon.png"></ion-img>
   <ion-card>
     <ion-card-content>
@@ -48,4 +48,4 @@
   <p>¿Tienes una cuenta?</p>
   <ion-button (click)="redirectTo('user/login')" size="small" shape="round" type="submit" fill="solid" class="sign-btn">
     Inicia Sesíon</ion-button>
-</ion-footer>
+</ion-footer> -->
