--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -28,7 +28,7 @@
         </ion-fab>
 
         <ion-item>
-          <ion-input type="text" name="name" formControlName="name" placeholder="Nombre">
+          <ion-input type="text" name="name" formControlName="name" placeholder="Nombre..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -41,7 +41,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="text" name="surname" formControlName="surname" placeholder="Apellido">
+          <ion-input type="text" name="surname" formControlName="surname" placeholder="Apellido..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -54,7 +54,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="number" name="dni" formControlName="dni" placeholder="DNI">
+          <ion-input type="number" name="dni" formControlName="dni" placeholder="DNI..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -67,7 +67,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="number" name="cuil" formControlName="cuil" placeholder="CUIL">
+          <ion-input type="number" name="cuil" formControlName="cuil" placeholder="CUIL..">
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-input>
         </ion-item>
@@ -84,7 +84,7 @@
             <ion-icon name="logo-reddit"></ion-icon>
           </ion-label>
 
-          <ion-select placeholder="Perfil" name="profile" formControlName="profile" okText="Confirmar"
+          <ion-select placeholder="Perfil.." name="profile" formControlName="profile" okText="Confirmar"
             cancelText="Cancelar">
             <ion-select-option *ngFor="let e of this.listEmployees">{{ e.kynd }}</ion-select-option>
           </ion-select>
@@ -98,7 +98,7 @@
         </ng-container>
 
         <ion-item>
-          <ion-input type="text" name="email" formControlName="email" placeholder="Correo">
+          <ion-input type="text" name="email" formControlName="email" placeholder="Correo..">
             <ion-icon name="mail-outline"></ion-icon>
           </ion-input>
         </ion-item>
