--- a/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/duenio_super/register.page.html
@@ -130,7 +130,7 @@
     </ion-card-content>
   </ion-card>
 
-  <ion-fab (click)="redirectTo('home')" vertical="bottom" horizontal="start">
+  <ion-fab (click)="redirectTo('home')" vertical="bottom" horizontal="start" slot="fixed">
     <ion-fab-button>
       <ion-icon name="home"></ion-icon>
     </ion-fab-button>
