--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -2,7 +2,7 @@
 
   <ion-fab vertical="top" horizontal="start" (click)="redirectTo('user/profile')">
     <ion-fab-button>
-      <img src="{{ user.img }}" alt="">
+      <img id="img-user" src="{{ user.img }}" alt="">
     </ion-fab-button>
   </ion-fab>
 
