--- a/TP_Comanda/src/app/pages/productos/alta-producto/alta-producto.page.html
+++ b/TP_Comanda/src/app/pages/productos/alta-producto/alta-producto.page.html
@@ -96,4 +96,11 @@
       </ion-item>
     </div>
   </form>
+
+  <ion-fab (click)="redirectTo('home')" vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button>
+      <ion-icon name="home"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
 </ion-content>
