--- a/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
@@ -1,97 +1,108 @@
 <ion-content>
-  <ion-img src=""></ion-img>
+
+  <ion-fab (click)="takePic()" vertical="top" horizontal="end">
+    <ion-fab-button>
+      <ion-icon name="camera"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+
+  <ion-card id="card-img">
+    <ion-card-content>
+      <ion-img *ngIf="this.img; else no_img" [src]="this.img.webPath"></ion-img>
+
+      <ng-template #no_img>
+        <ion-img src="assets/images/default.jpg"></ion-img>
+      </ng-template>
+
+    </ion-card-content>
+  </ion-card>
+
   <ion-card>
     <ion-card-content>
 
-      <!-- <form [formGroup]="form" (ngSubmit)="onLogin()"> -->
-      <form [formGroup]="form" >
-        <div class="wrapform">
-          <ion-item>
-            <ion-input type="text" name="nombre" formControlName="nombre" placeholder="Nombre">
-              <ion-icon name="nombre-outline"></ion-icon>
-            </ion-input>
-          </ion-item>
-          <!-- <div>
-            <ng-container *ngFor="let validation of validationUserMessage.nombre">
-              
-              <div class="error_message"
-                *ngIf="form.get('nombre').hasError(validation.type) && (form.get('nombre').dirty || form.get('nombre').touched)">
-                {{validation.message}}
-              </div>
-            </ng-container>
-          </div> -->
+      <form [formGroup]="form" (ngSubmit)="onRegister()">
+        <ion-fab (click)="scannQR()" vertical="top" horizontal="end" slot="fixed">
+          <ion-fab-button>
+            <ion-icon name="barcode"></ion-icon>
+          </ion-fab-button>
+        </ion-fab>
 
-          <ion-item>
-            <ion-input type="text" name="apellido" formControlName="apellido" placeholder="Apellido">
-              <ion-icon name="apellido-outline"></ion-icon>
-            </ion-input>
-          </ion-item>
-          <!-- <div>
-            <ng-container *ngFor="let validation of validationUserMessage.apellido">
-              <div class="error_message"
-                *ngIf="form.get('apellido').hasError(validation.type) && (form.get('apellido').dirty || form.get('apellido').touched)">
-                {{validation.message}}
-              </div>
-            </ng-container>
-          </div> -->
+        <ion-item>
+          <ion-input type="text" name="name" formControlName="name" placeholder="Nombre..">
+            <ion-icon name="logo-reddit"></ion-icon>
+          </ion-input>
+        </ion-item>
 
-          <ion-item>
-            <ion-input type="number" name="dni" formControlName="dni" placeholder="DNI">
-              <ion-icon name="dni-outline"></ion-icon>
-            </ion-input>
-          </ion-item>
-          <!-- <div>
-            <ng-container *ngFor="let validation of validationUserMessage.dni">
-              <div class="error_message"
-                *ngIf="form.get('dni').hasError(validation.type) && (form.get('dni').dirty || form.get('dni').touched)">
-                {{validation.message}}
-              </div>
-            </ng-container>
-          </div> -->
-
-          
-            
-        
-          <ion-item>
-            <ion-input type="text" name="email" formControlName="email" placeholder="Email">
-              <ion-icon name="mail-outline"></ion-icon>
-            </ion-input>
-          </ion-item>
-          <!-- <div>
-            <ng-container *ngFor="let validation of validationUserMessage.email">
-              <div class="error_message"
-                *ngIf="form.get('email').hasError(validation.type) && (form.get('email').dirty || form.get('email').touched)">
-                {{validation.message}}
-              </div>
-            </ng-container>
-          </div> -->
-
-          <ion-item>
-            <ion-input type="password" name="password" formControlName="password" placeholder="**************">
-              <ion-icon name="lock-closed"></ion-icon>
-            </ion-input>
-          </ion-item>
-          <div>
-            <ng-container *ngFor="let validation of validationUserMessage.password">
-              <div class="error_message"
-                *ngIf="form.get('password').hasError(validation.type) && (form.get('password').dirty || form.get('password').touched)">
-                {{validation.message}}
-              </div>
-            </ng-container>
+        <ng-container *ngFor="let validation of validationUserMessage.name">
+          <div class="error_message"
+            *ngIf="form.get('name').hasError(validation.type) && (form.get('name').dirty || form.get('name').touched)">
+            {{validation.message}}
           </div>
+        </ng-container>
 
-        </div>
+        <ion-item>
+          <ion-input type="text" name="surname" formControlName="surname" placeholder="Apellido..">
+            <ion-icon name="logo-reddit"></ion-icon>
+          </ion-input>
+        </ion-item>
+
+        <ng-container *ngFor="let validation of validationUserMessage.surname">
+          <div class="error_message"
+            *ngIf="form.get('surname').hasError(validation.type) && (form.get('surname').dirty || form.get('surname').touched)">
+            {{validation.message}}
+          </div>
+        </ng-container>
+
+        <ion-item>
+          <ion-input type="number" name="dni" formControlName="dni" placeholder="DNI..">
+            <ion-icon name="logo-reddit"></ion-icon>
+          </ion-input>
+        </ion-item>
+
+        <ng-container *ngFor="let validation of validationUserMessage.dni">
+          <div class="error_message"
+            *ngIf="form.get('dni').hasError(validation.type) && (form.get('dni').dirty || form.get('dni').touched)">
+            {{validation.message}}
+          </div>
+        </ng-container>
+
+        <ion-item>
+          <ion-input type="text" name="email" formControlName="email" placeholder="Correo..">
+            <ion-icon name="mail-outline"></ion-icon>
+          </ion-input>
+        </ion-item>
+
+        <ng-container *ngFor="let validation of validationUserMessage.email">
+          <div class="error_message"
+            *ngIf="form.get('email').hasError(validation.type) && (form.get('email').dirty || form.get('email').touched)">
+            {{validation.message}}
+          </div>
+        </ng-container>
+
+        <ion-item>
+          <ion-input type="password" name="password" formControlName="password" placeholder="**************">
+            <ion-icon name="lock-closed-outline"></ion-icon>
+          </ion-input>
+        </ion-item>
+
+        <ng-container *ngFor="let validation of validationUserMessage.password">
+          <div class="error_message"
+            *ngIf="form.get('password').hasError(validation.type) && (form.get('password').dirty || form.get('password').touched)">
+            {{validation.message}}
+          </div>
+        </ng-container>
 
         <ion-button shape="round" type="submit" fill="solid" class="sign-btn" [disabled]="!form.valid">
-          Ingresar</ion-button>
+          Registrar</ion-button>
 
       </form>
     </ion-card-content>
   </ion-card>
+
 </ion-content>
 
 <ion-footer>
   <p>¿Tienes una cuenta?</p>
   <ion-button (click)="redirectTo('user/login')" size="small" shape="round" type="submit" fill="solid" class="sign-btn">
     Inicia Sesíon</ion-button>
-</ion-footer> -->
+</ion-footer>
