registro de user, falta

--- a/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
+++ b/TP_Comanda/src/app/pages/user/register/cliente/register.page.html
@@ -99,6 +99,10 @@
     </ion-card-content>
   </ion-card>
 
+  <ion-fab (click)="redirectTo('user/register/anonimo')" vertical="bottom" horizontal="start" slot="fixed">
+    <ion-fab-button id="anonymus"> 🕵️ </ion-fab-button>
+  </ion-fab>
+
 </ion-content>
 
 <ion-footer>
