--- a/TP_Comanda/src/app/pages/home/home.page.html
+++ b/TP_Comanda/src/app/pages/home/home.page.html
@@ -1,6 +1,6 @@
 <ion-content *ngIf="this.user">
 
-  <ion-fab vertical="bottom" horizontal="start" (click)="redirectTo('user/profile')">
+  <ion-fab vertical="bottom" horizontal="start" slot="fixed" (click)="redirectTo('user/profile')">
     <ion-fab-button>
       <img src="{{ user.img }}" alt="">
     </ion-fab-button>
