--- a/TP_Comanda/src/app/pages/home/home.page.scss
+++ b/TP_Comanda/src/app/pages/home/home.page.scss
@@ -3,8 +3,10 @@
 
   ion-card {
     display: -webkit-inline-box;
-    width: 40%;
-    height: 20%;
+    // width: 40%;
+    // height: 20%;
+    width: 95%;
+    height: 40%;
     margin: 2%;
 
     p {
@@ -17,8 +19,10 @@
 
     img {
       padding: 2.4%;
-      width: max-content;
-      height: max-content;
+      // width: max-content;
+      // height: max-content;
+      width: 95%;
+      height: 40%;
     }
   }
 }
